# nerdy-ad-engine

./: .gitignore  Makefile  README.md  architecture.md  initial_plan.md  nerdy-ad-engine-plan.md  phases.md  pyproject.toml  requirements.txt
config/: brand_guidelines.yaml  briefs.yaml  dimensions.yaml  settings.yaml
data/: competitor_ads.json  reference_ads.json
data/patterns/: taxonomy.json
docs/: decision_log.md  limitations.md
src/: demo.py  main.py  models.py
src/analytics/: experiment_logger.py  quality_ratchet.py  quality_tracker.py  self_healer.py  token_tracker.py
src/evaluate/: aggregator.py  calibrator.py  dimension_scorer.py  quality_gate.py
src/generate/: brief_interpreter.py  variant_strategy.py  writer.py
src/iterate/: escalation.py  targeted_editor.py  weakness_diagnostician.py
src/llm/: client.py  prompts.py
src/research/: competitor_analyzer.py  pattern_taxonomy.py  reference_analyzer.py
tests/: conftest.py  test_aggregator.py  test_brief_interpreter.py  test_calibrator.py  test_competitor_analyzer.py  test_demo.py  test_dimension_scorer.py  test_enriched_generation.py  test_escalation.py  test_experiment_logger.py  test_iteration_integration.py  test_llm_client.py  test_models.py  test_pattern_taxonomy.py  test_pipeline.py  test_pipeline_integration.py  test_quality_gate.py  test_quality_ratchet.py  test_quality_tracker.py  test_reference_analyzer.py  test_self_healer.py  test_targeted_editor.py  test_token_tracker.py  test_variant_strategy.py  test_weakness_diagnostician.py  test_writer.py
